--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-react-app",
   "version": "0.1.0",
-  "homepage": "https://niken2202.github.io/perler/cf2022",
+  "homepage": "https://niken2202.github.io/perler",
   "private": true,
   "installConfig": {
     "pnp": true
